Set the max width for the Layout, Profile and Activity components to prevent it getting too wide in desktop view

--- a/src/Components/Activity/Activity.module.css
+++ b/src/Components/Activity/Activity.module.css
@@ -47,6 +47,7 @@
     .Activity {
         width: 20vw;
         min-width: 200px;
+        max-width: 240px;
     }
 
     .Work {
