--- a/src/HLC/Layout/Layout.module.css
+++ b/src/HLC/Layout/Layout.module.css
@@ -13,7 +13,7 @@
             'profile    exercise   social  self-care';
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
-        max-width: none;
+        max-width: 990px;
         position: absolute;
         top: 50%;
         left: 50%;
